@@ -31,6 +31,8 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.ArrayList;
+import java.util.List;
 
 /**
  * Tests for sql script generator.
@@ -325,71 +327,34 @@ public class CompilerPluginTest {
 
     @Test
     public void testGenerateSqlScript9() throws IOException {
-        String fileContent = "DROP TABLE IF EXISTS MedicalNeeds;\n" +
+        String fileContent = "DROP TABLE IF EXISTS MedicalItem;\n" +
+                "CREATE TABLE MedicalItem (\n" +
+                "\tneedId INT NOT NULL AUTO_INCREMENT,\n" +
+                "\titemId INT NOT NULL,\n" +
+                "\tbeneficiaryId INT NOT NULL,\n" +
+                "\tperiod VARCHAR(191) NOT NULL,\n" +
+                "\turgency VARCHAR(191) NOT NULL,\n" +
+                "\tquantity INT NOT NULL,\n" +
+                "\tPRIMARY KEY(needId)\n" +
+                ");\n" +
+                "\n" +
+                "DROP TABLE IF EXISTS MedicalNeeds;\n" +
                 "\n" +
                 "DROP TABLE IF EXISTS Item;\n" +
                 "\n" +
                 "DROP TABLE IF EXISTS Item1;\n" +
                 "CREATE TABLE Item1 (\n" +
                 "\tid INT NOT NULL AUTO_INCREMENT,\n" +
-                "\tname VARCHAR(20) NOT NULL,\n" +
+                "\tname VARCHAR(191) NOT NULL,\n" +
                 "\tPRIMARY KEY(id)\n" +
                 ")\tAUTO_INCREMENT = 5;\n" +
                 "\n" +
                 "CREATE TABLE Item (\n" +
                 "\tid INT NOT NULL AUTO_INCREMENT,\n" +
-                "\tname VARCHAR(50) NOT NULL,\n" +
+                "\tname VARCHAR(191) NOT NULL,\n" +
                 "\titemId1 INT,\n" +
                 "\tCONSTRAINT FK_ITEM_ITEM1_0 FOREIGN KEY(itemId1) REFERENCES Item1(id) ON DELETE CASCADE,\n" +
                 "\tPRIMARY KEY(id)\n" +
-                ")\tAUTO_INCREMENT = 3;\n" +
-                "\n" +
-                "CREATE TABLE MedicalNeeds (\n" +
-                "\tneedId INT NOT NULL AUTO_INCREMENT,\n" +
-                "\tbeneficiaryId INT NOT NULL,\n" +
-                "\tperiod VARCHAR(191) NOT NULL,\n" +
-                "\turgency VARCHAR(20) NOT NULL,\n" +
-                "\tquantity INT NOT NULL,\n" +
-                "\titemId INT,\n" +
-                "\tCONSTRAINT FK_MEDICALNEEDS_ITEM_0 FOREIGN KEY(itemId) REFERENCES Item(id) ON DELETE CASCADE,\n" +
-                "\tPRIMARY KEY(needId),\n" +
-                "\tUNIQUE KEY(beneficiaryId, urgency)\n" +
-                ");";
-        testSqlScript("package_10", fileContent, 0, "");
-    }
-
-    @Test
-    public void testGenerateSqlScript10() throws IOException {
-        String fileContent = "DROP TABLE IF EXISTS MedicalNeeds;\n" +
-                "\n" +
-                "DROP TABLE IF EXISTS Item1;\n" +
-                "\n" +
-                "DROP TABLE IF EXISTS Item2;\n" +
-                "CREATE TABLE Item2 (\n" +
-                "\tid INT NOT NULL AUTO_INCREMENT,\n" +
-                "\tname VARCHAR(20) NOT NULL,\n" +
-                "\tPRIMARY KEY(id),\n" +
-                "\tUNIQUE KEY(name)\n" +
-                ")\tAUTO_INCREMENT = 2;\n" +
-                "\n" +
-                "CREATE TABLE Item1 (\n" +
-                "\tid INT NOT NULL AUTO_INCREMENT,\n" +
-                "\tname VARCHAR(20) NOT NULL,\n" +
-                "\titemId INT,\n" +
-                "\tCONSTRAINT FK_ITEM1_ITEM2_0 FOREIGN KEY(itemId) REFERENCES Item2(id) ON DELETE CASCADE,\n" +
-                "\titemName VARCHAR(20),\n" +
-                "\tCONSTRAINT FK_ITEM1_ITEM2_1 FOREIGN KEY(itemName) REFERENCES Item2(name) ON DELETE CASCADE,\n" +
-                "\tPRIMARY KEY(id),\n" +
-                "\tUNIQUE KEY(name)\n" +
-                ")\tAUTO_INCREMENT = 5;\n" +
-                "\n" +
-                "\n" +
-                "DROP TABLE IF EXISTS Item;\n" +
-                "CREATE TABLE Item (\n" +
-                "\tid INT NOT NULL AUTO_INCREMENT,\n" +
-                "\tname VARCHAR(10) NOT NULL,\n" +
-                "\tPRIMARY KEY(id),\n" +
-                "\tUNIQUE KEY(name)\n" +
                 ")\tAUTO_INCREMENT = 3;\n" +
                 "\n" +
                 "CREATE TABLE MedicalNeeds (\n" +
@@ -400,33 +365,79 @@ public class CompilerPluginTest {
                 "\tquantity INT NOT NULL,\n" +
                 "\titemId INT,\n" +
                 "\tCONSTRAINT FK_MEDICALNEEDS_ITEM_0 FOREIGN KEY(itemId) REFERENCES Item(id) ON DELETE CASCADE,\n" +
-                "\tname VARCHAR(191),\n" +
-                "\tCONSTRAINT FK_MEDICALNEEDS_ITEM_1 FOREIGN KEY(name) REFERENCES Item(name) ON DELETE CASCADE,\n" +
-                "\titemId1 INT,\n" +
-                "\tCONSTRAINT FK_MEDICALNEEDS_ITEM1_0 FOREIGN KEY(itemId1) REFERENCES Item1(id) ON DELETE CASCADE,\n" +
-                "\tname1 VARCHAR(191),\n" +
-                "\tCONSTRAINT FK_MEDICALNEEDS_ITEM1_1 FOREIGN KEY(name1) REFERENCES Item1(name) ON DELETE CASCADE,\n" +
                 "\tPRIMARY KEY(needId),\n" +
                 "\tUNIQUE KEY(beneficiaryId, urgency)\n" +
                 ");";
-        testSqlScript("package_11", fileContent, 0, "");
+        String fileContent1 = "DROP TABLE IF EXISTS MedicalNeeds;\n" +
+                "\n" +
+                "DROP TABLE IF EXISTS Item;\n" +
+                "\n" +
+                "DROP TABLE IF EXISTS Item1;\n" +
+                "CREATE TABLE Item1 (\n" +
+                "\tid INT NOT NULL AUTO_INCREMENT,\n" +
+                "\tname VARCHAR(191) NOT NULL,\n" +
+                "\tPRIMARY KEY(id)\n" +
+                ")\tAUTO_INCREMENT = 5;\n" +
+                "\n" +
+                "CREATE TABLE Item (\n" +
+                "\tid INT NOT NULL AUTO_INCREMENT,\n" +
+                "\tname VARCHAR(191) NOT NULL,\n" +
+                "\titemId1 INT,\n" +
+                "\tCONSTRAINT FK_ITEM_ITEM1_0 FOREIGN KEY(itemId1) REFERENCES Item1(id) ON DELETE CASCADE,\n" +
+                "\tPRIMARY KEY(id)\n" +
+                ")\tAUTO_INCREMENT = 3;\n" +
+                "\n" +
+                "CREATE TABLE MedicalNeeds (\n" +
+                "\tneedId INT NOT NULL AUTO_INCREMENT,\n" +
+                "\tbeneficiaryId INT NOT NULL,\n" +
+                "\tperiod VARCHAR(191) NOT NULL,\n" +
+                "\turgency VARCHAR(191) NOT NULL,\n" +
+                "\tquantity INT NOT NULL,\n" +
+                "\titemId INT,\n" +
+                "\tCONSTRAINT FK_MEDICALNEEDS_ITEM_0 FOREIGN KEY(itemId) REFERENCES Item(id) ON DELETE CASCADE,\n" +
+                "\tPRIMARY KEY(needId),\n" +
+                "\tUNIQUE KEY(beneficiaryId, urgency)\n" +
+                ");\n" +
+                "\n" +
+                "DROP TABLE IF EXISTS MedicalItem;\n" +
+                "CREATE TABLE MedicalItem (\n" +
+                "\tneedId INT NOT NULL AUTO_INCREMENT,\n" +
+                "\titemId INT NOT NULL,\n" +
+                "\tbeneficiaryId INT NOT NULL,\n" +
+                "\tperiod VARCHAR(191) NOT NULL,\n" +
+                "\turgency VARCHAR(191) NOT NULL,\n" +
+                "\tquantity INT NOT NULL,\n" +
+                "\tPRIMARY KEY(needId)\n" +
+                ");";
+        List<String> fileContents = new ArrayList<>();
+        fileContents.add(fileContent);
+        fileContents.add(fileContent1);
+        Package currentPackage = loadPackage("package_10");
+        currentPackage.getCompilation();
+        Path directoryPath = currentPackage.project().targetDir().toAbsolutePath();
+        Path filePath = Paths.get(String.valueOf(directoryPath), "persist_db_scripts.sql");
+        Assert.assertTrue(Files.exists(filePath), "The file doesn't exist");
+        String content = Files.readString(filePath);
+        Assert.assertTrue(fileContents.contains(content));
+        Files.deleteIfExists(filePath);
+        Files.deleteIfExists(directoryPath);
     }
 
     private void testSqlScript(String packagePath, String fileContent, int count,
                                String warningMsg) throws IOException {
-        Path path = Paths.get("target").toAbsolutePath();
-        Files.createDirectories(path);
-        assertTest(loadPackage(packagePath).getCompilation().diagnosticResult(), fileContent, count, warningMsg);
-        Files.deleteIfExists(Paths.get("target", "persist_db_scripts.sql").toAbsolutePath());
-        Files.deleteIfExists(path);
+        Package currentPackage = loadPackage(packagePath);
+        Path directoryPath = currentPackage.project().targetDir().toAbsolutePath();
+        Path filePath = Path.of(directoryPath + "/persist_db_scripts.sql");
+        assertTest(currentPackage.getCompilation().diagnosticResult(), filePath, fileContent, count, warningMsg);
+        Files.deleteIfExists(filePath);
+        Files.deleteIfExists(directoryPath);
     }
 
-    private void assertTest(DiagnosticResult result, String fileContent, int count, String warningMsg) {
+    private void assertTest(DiagnosticResult result, Path path, String fileContent, int count, String warningMsg) {
         Assert.assertEquals(result.diagnostics().size(), count);
         if (count > 0) {
             Assert.assertTrue(result.warnings().toArray()[0].toString().contains(warningMsg));
         }
-        Path path = Paths.get("target", "persist_db_scripts.sql").toAbsolutePath();
         Assert.assertTrue(Files.exists(path), "The file doesn't exist");
         try {
             Assert.assertSame(Files.readString(path), fileContent, "The file content mismatched");
@@ -435,3 +446,5 @@ public class CompilerPluginTest {
         }
     }
 }
+
+
